# bgfx-qml-in-texture

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  bgfx_item.cpp  bgfx_item.h  bgfx_item2.cpp  bgfx_item2.h  main.cpp  main.qml  render_thread.cpp  render_thread.h
src/: bgfx_item.cpp  bgfx_item.h  bgfx_item2.h  render_engine.cpp  render_engine.h  render_thread.cpp  render_thread.h  texture_node.cpp
